# smol_web_agents

./: CLAUDE.md  README.md  basic_web_agent.py  demo_image_to_text.py  example_index.md  form_analyzer.py  form_analyzer_readme.md  form_review.py  gradio_image_agent.py  image_save_tool.py  image_to_text_tool.py  pyproject.toml  web_browser.py  what_forms_are_on_page.py
form_analyzer_output/: form_interaction.py
form_tools/form_analyzer_output/: form_analysis.json
image_tools/: image_gen_agent.py
ui_examples/: gradio_image_to_text.py
web_automation/: all_base_tools.py  basic_agent.py  basic_fetch.py  helium_test.py  web_browser.py
